# cxd

./: CHANGELOG.md  Cargo.toml  LICENSE  README  README.md
pkg/: hi
pkg/completions/bash/: cxd-completion.bash
pkg/completions/zsh/: _cxd
src/: cli.rs  command.rs  command_store.rs  error.rs  main.rs
src/cli/: defines.rs
src/command_store/: arg_row.rs  cmd_row.rs  env_row.rs
tests/: mod.rs  util.rs
tests/cli/: help.rs  mod.rs
tests/ops/: add.rs  help.rs  mod.rs  remove.rs
