[package]
name = "cxd"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
const_format = "0.2.32"
pico-args = "0.5.0"
rusqlite = "0.31.0"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.15"
predicates = "3.1.2"
uuid = { version = "1.10.0", features = ["v7"] }
