[package]
name = "cxd"
repository = "https://github.com/wikki01/cxd"
description = "a command for commands"
version = "0.1.0"
authors = ["wikki <wikki_0@proton.me>"]
license = "MIT"
edition = "2021"

keywords = ["cli", "tool", "workflow", "command", "utility"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
strip = true

[dependencies]
const_format = "0.2.32"
pico-args = "0.5.0"
rusqlite = "0.31.0"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.15"
predicates = "3.1.2"
uuid = { version = "1.10.0", features = ["v7"] }
